# lakeflow-community-connectors

./: .gitignore  README.md  ingestion_config.py  pyproject.toml
libs/: __init__.py  source_loader.py  spec_parser.py  utils.py
libs/test/: test_spec_parser.py  test_utils.py
pipeline/: __init__.py  ingest.py  ingestion_pipeline.py  lakeflow_connect.py  lakeflow_connect_enricher.py  lakeflow_python_source.py
pipeline-spec/: example_ingest.py
pipeline/test/: test_ingestion_pipeline.py
prompts/: community_connector_doc_template.md  lakeflow_connector_doc_template.md  source_api_doc_template.md  vibe_coding_instruction.md
scripts/: README.md  merge_python_source.py
sources/: __init__.py
sources/example/: __init__.py  _generated_example_python_source.py  example.py
sources/example/configs/: dev_config.json  dev_table_config.json
sources/example/test/: __init__.py  test_example_lakeflow_connect.py
sources/github/: README.md  __init__.py  _generated_github_python_source.py  github.py  github_api_doc.md
sources/github/configs/: dev_config.json  dev_table_config.json
sources/github/test/: __init__.py  (+1 more)
sources/hubspot/: README.md  __init__.py  _generated_hubspot_python_source.py  hubspot.py  hubspot_test_utils.py
sources/interface/: __init__.py  lakeflow_connect.py
sources/stripe/: README.md  __init__.py  _generated_stripe_python_source.py  stripe.py
sources/zendesk/: README.md  __init__.py  _generated_zendesk_python_source.py  zendesk.py
tests/: __init__.py  lakeflow_connect_test_utils.py  test_suite.py  test_utils.py  write_to_source.py
(+7 files in other folders)
